# jota

./: CHANGELOG.md  Cargo.toml  README.md  manifest.scm
.github/workflows/: build.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  repl.rs
core/: Cargo.toml
core/src/: cache.rs  commands.rs  contacts.rs  display.rs  error.rs  ledger_signer.rs  lib.rs  network.rs  recipient.rs  service.rs  signer.rs  wallet.rs  wallet_file.rs
core/src/commands/: execute.rs  help.rs  mod.rs  parse.rs
core/src/multisig/: formats.rs  mod.rs  signing.rs  store.rs
core/src/network/: history.rs  mod.rs  names.rs  nfts.rs  notarize.rs  staking.rs  transfer.rs  types.rs
core/tests/: integration.rs
extension/: build.mjs  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  popup.html  popup.js  tsconfig.json
extension/src/: background.ts  content.ts  protocol.ts  wallet.ts
gui/: Cargo.toml
gui/assets/: jota-gui.desktop
gui/src/: chart.rs  helpers.rs  main.rs  messages.rs  native_messaging.rs  permissions.rs  state.rs  styles.rs  update.rs
gui/src/views/: account.rs  approval.rs  contacts.rs  create.rs  hardware.rs  history.rs  ledger.rs  mod.rs  multisig.rs  nfts.rs  open.rs  receive.rs  recover.rs  send.rs  settings.rs  sign.rs  staking.rs  welcome.rs
scripts/: deploy-notarization.sh
