[workspace]
members = ["core", "cli", "gui"]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"
authors = ["Franz Geffke <mail@gofranz.com>"]
license = "MIT"
repository = "https://github.com/franzos/jota"
description = "Monero-inspired wallet for IOTA Rebased"

[profile.release]
lto = true
strip = true
codegen-units = 1
