[package]
name = "iota-wallet"
description = "Monero-inspired REPL wallet for IOTA Rebased"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "iota-wallet"
path = "src/main.rs"

[features]
default = ["ledger"]
hardware-wallets = ["iota-wallet-core/hardware-wallets"]
ledger = ["hardware-wallets", "iota-wallet-core/ledger"]

[dependencies]
iota-wallet-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
reedline = "0.38"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
rpassword = "7"
zeroize = "1"
dirs = "5"
