[package]
name = "jota"
description = "Monero-inspired REPL wallet for IOTA Rebased"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jota"
path = "src/main.rs"

[features]
default = ["ledger"]
hardware-wallets = ["jota-core/hardware-wallets"]
ledger = ["hardware-wallets", "jota-core/ledger"]

[package.metadata.deb]
maintainer = "Franz Geffke <mail@gofranz.com>"
section = "utils"
assets = [
    ["target/release/jota", "usr/bin/", "755"],
    ["target/release/jota-gui", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/jota", dest = "/usr/bin/jota", mode = "755" },
    { source = "target/release/jota-gui", dest = "/usr/bin/jota-gui", mode = "755" },
]

[dependencies]
jota-core = { path = "../core" }
iota-sdk = "3.0.0-alpha.1"
base64ct = { version = "1", features = ["alloc"] }
clap = { version = "4", features = ["derive", "env"] }
reedline = "0.45"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde_json = "1"
rpassword = "7"
zeroize = "1"
dirs = "6"
