[package]
name = "iota-wallet-core"
description = "Core library for the IOTA Rebased wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
ledger = ["dep:ledger-iota-rebased"]

[dependencies]
iota-sdk = "3.0.0-alpha.1"
ledger-iota-rebased = { package = "ledger-iota", version = "0.1.0", features = ["iota-sdk-types"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
argon2 = "0.5"
# NOTE: aes-gcm 0.10 triggers generic-array deprecation warnings via transitive deps.
# No newer major version available yet that avoids this.
aes-gcm = "0.10"
rand = "0.8"
bip39 = { version = "2", features = ["rand"] }
zeroize = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
futures = "0.3"
base64ct = { version = "1", features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
