[package]
name = "jota-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "jota-gui"
path = "src/main.rs"

[features]
default = ["ledger"]
hardware-wallets = ["jota-core/hardware-wallets"]
ledger = ["hardware-wallets", "jota-core/ledger"]

[dependencies]
jota-core = { path = "../core" }
iced = { version = "0.14", features = ["tokio", "svg", "canvas", "qr_code"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
dirs = "6"
arboard = { version = "3", features = ["wayland-data-control"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64ct = { version = "1", features = ["alloc"] }
libc = "0.2"
